more missing install var to set. CCBUGS: 416704

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -103,13 +103,17 @@ if (Qt6_FOUND)
     set(XDG_APPS_INSTALL_DIR  ${KDE_INSTALL_FULL_APPDIR})
     set(KNOTIFYRC_INSTALL_DIR ${KDE_INSTALL_FULL_KNOTIFYRCDIR})
     set(BIN_INSTALL_DIR       ${KDE_INSTALL_FULL_BINDIR})
+    set(MAN_INSTALL_DIR       ${KDE_INSTALL_FULL_MANDIR})
     set(PLUGIN_INSTALL_DIR    ${KDE_INSTALL_FULL_PLUGINDIR})
+    set(KXMLGUI_INSTALL_DIR   ${KDE_INSTALL_FULL_KXMLGUIDIR})
     message(STATUS "DATA_INSTALL_DIR     : ${DATA_INSTALL_DIR}")
     message(STATUS "ICON_INSTALL_DIR     : ${ICON_INSTALL_DIR}")
     message(STATUS "XDG_APPS_INSTALL_DIR : ${XDG_APPS_INSTALL_DIR}")
     message(STATUS "KNOTIFYRC_INSTALL_DIR: ${KNOTIFYRC_INSTALL_DIR}")
     message(STATUS "BIN_INSTALL_DIR      : ${BIN_INSTALL_DIR}")
+    message(STATUS "MAN_INSTALL_DIR      : ${MAN_INSTALL_DIR}")
     message(STATUS "PLUGIN_INSTALL_DIR   : ${PLUGIN_INSTALL_DIR}")
+    message(STATUS "KXMLGUI_INSTALL_DIR  : ${KXMLGUI_INSTALL_DIR}")
 
 endif()
 
