--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,8 @@ message(STATUS "CMake version: ${VERSION_CMAKE_INFO}")
 # Information to update before to release this package.
 
 # digiKam version
-set(DIGIKAM_MAJOR_VERSION "7")
-set(DIGIKAM_MINOR_VERSION "6")
+set(DIGIKAM_MAJOR_VERSION "8")
+set(DIGIKAM_MINOR_VERSION "0")
 set(DIGIKAM_PATCH_VERSION "0")
 
 # Suffix to add at end of version string. Usual values are:
@@ -27,7 +27,7 @@ set(DIGIKAM_PATCH_VERSION "0")
 # "-beta3" : beta3 release.
 # "-rc"    : release candidate.
 # ""       : final release. Can be used in production.
-set(DIGIKAM_SUFFIX_VERSION "")
+set(DIGIKAM_SUFFIX_VERSION "-git")
 
 # ==============================================================================
 # Set env. variables accordingly.
