--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -342,9 +342,17 @@ endif()
 find_package(X11)
 
 if(X11_FOUND)
+
+    if(NOT Qt6_FOUND)
+        find_package(Qt5 ${QT_MIN_VERSION} NO_MODULE COMPONENTS X11Extras)
+    endif()
+
     set(HAVE_X11 TRUE)
+
 else()
+
     set(HAVE_X11 FALSE)
+
 endif()
 
 # -- OpenGL rules -------------------------------------------------------------
