Print install path provided by ECM on the console and patch all install path used in cmake scripts use KDE prefix full paths

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -98,23 +98,6 @@ if (Qt6_FOUND)
 
     find_package(Qt${QT_VERSION_MAJOR} REQUIRED NO_MODULE COMPONENTS Core5Compat)
 
-    set(DATA_INSTALL_DIR      ${KDE_INSTALL_FULL_DATADIR})
-    set(ICON_INSTALL_DIR      ${KDE_INSTALL_FULL_ICONDIR})
-    set(XDG_APPS_INSTALL_DIR  ${KDE_INSTALL_FULL_APPDIR})
-    set(KNOTIFYRC_INSTALL_DIR ${KDE_INSTALL_FULL_KNOTIFYRCDIR})
-    set(BIN_INSTALL_DIR       ${KDE_INSTALL_FULL_BINDIR})
-    set(MAN_INSTALL_DIR       ${KDE_INSTALL_FULL_MANDIR})
-    set(PLUGIN_INSTALL_DIR    ${KDE_INSTALL_FULL_PLUGINDIR})
-    set(KXMLGUI_INSTALL_DIR   ${KDE_INSTALL_FULL_KXMLGUIDIR})
-    message(STATUS "DATA_INSTALL_DIR     : ${DATA_INSTALL_DIR}")
-    message(STATUS "ICON_INSTALL_DIR     : ${ICON_INSTALL_DIR}")
-    message(STATUS "XDG_APPS_INSTALL_DIR : ${XDG_APPS_INSTALL_DIR}")
-    message(STATUS "KNOTIFYRC_INSTALL_DIR: ${KNOTIFYRC_INSTALL_DIR}")
-    message(STATUS "BIN_INSTALL_DIR      : ${BIN_INSTALL_DIR}")
-    message(STATUS "MAN_INSTALL_DIR      : ${MAN_INSTALL_DIR}")
-    message(STATUS "PLUGIN_INSTALL_DIR   : ${PLUGIN_INSTALL_DIR}")
-    message(STATUS "KXMLGUI_INSTALL_DIR  : ${KXMLGUI_INSTALL_DIR}")
-
 endif()
 
 if (DISABLE_QWEB)
@@ -385,6 +368,19 @@ if(Qt6_FOUND AND Qt${QT_VERSION_MAJOR}OpenGLWidgets_FOUND)
 elseif()
     set(HAVE_OPENGL FALSE)
 endif()
+
+# -- Install Paths ------------------------------------------------------------
+
+message(STATUS "INSTALL DATA DIR     : ${KDE_INSTALL_FULL_DATADIR}")
+message(STATUS "INSTALL ICON DIR     : ${KDE_INSTALL_FULL_ICONDIR}")
+message(STATUS "INSTALL APP DIR      : ${KDE_INSTALL_FULL_APPDIR}")
+message(STATUS "INSTALL KNOTIFYRC DIR: ${KDE_INSTALL_FULL_KNOTIFYRCDIR}")
+message(STATUS "INSTALL BIN DIR      : ${KDE_INSTALL_FULL_BINDIR}")
+message(STATUS "INSTALL MAN DIR      : ${KDE_INSTALL_FULL_MANDIR}")
+message(STATUS "INSTALL PLUGIN DIR   : ${KDE_INSTALL_FULL_PLUGINDIR}")
+message(STATUS "INSTALL KXMLGUI DIR  : ${KDE_INSTALL_FULL_KXMLGUIDIR}")
+message(STATUS "INSTALL SERVICES DIR : ${KDE_INSTALL_FULL_KSERVICESDIR}")
+message(STATUS "INSTALL LIBEXEC DIR  : ${KDE_INSTALL_FULL_LIBEXECDIR}")
 
 # -- Windows rules ------------------------------------------------------------
 
