--- a/core/utilities/import/CMakeLists.txt
+++ b/core/utilities/import/CMakeLists.txt
@@ -102,4 +102,4 @@ target_compile_definitions(gui_importui_obj
                            digikamgui_EXPORTS
 )
 
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/main/importui5.rc DESTINATION ${KXMLGUI_INSTALL_DIR}/digikam)
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/main/importui5.rc DESTINATION ${KDE_INSTALL_FULL_KXMLGUIDIR}/digikam)
