--- a/core/data/pics/digikam/CMakeLists.txt
+++ b/core/data/pics/digikam/CMakeLists.txt
@@ -7,5 +7,5 @@
 file(GLOB _files *.png)
 
 install(FILES ${_files}
-        DESTINATION ${DATA_INSTALL_DIR}/digikam/data
+        DESTINATION ${KDE_INSTALL_FULL_DATADIR}/digikam/data
 )
