--- a/core/data/pics/texturepatterns/CMakeLists.txt
+++ b/core/data/pics/texturepatterns/CMakeLists.txt
@@ -20,5 +20,5 @@ install(FILES bricks2-texture.png
               modern-texture.png
               wall-texture.png
               moss-texture.png
-        DESTINATION ${DATA_INSTALL_DIR}/digikam/data
+        DESTINATION ${KDE_INSTALL_FULL_DATADIR}/digikam/data
 )
