--- a/core/utilities/imageeditor/CMakeLists.txt
+++ b/core/utilities/imageeditor/CMakeLists.txt
@@ -98,4 +98,4 @@ target_compile_definitions(gui_imageeditorgui_obj
                            digikamgui_EXPORTS
 )
 
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/main/imageeditorui5.rc DESTINATION ${KXMLGUI_INSTALL_DIR}/digikam)
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/main/imageeditorui5.rc DESTINATION ${KDE_INSTALL_FULL_KXMLGUIDIR}/digikam)
