--- a/core/libs/widgets/CMakeLists.txt
+++ b/core/libs/widgets/CMakeLists.txt
@@ -17,7 +17,7 @@ set(liblayouttools_SRCS
     ${CMAKE_CURRENT_SOURCE_DIR}/layout/statesavingobject.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/layout/dlayoutbox.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/layout/thumbbardock.cpp
-    ${CMAKE_CURRENT_SOURCE_DIR}/layout/sidebar_.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/layout/sidebar.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/layout/sidebar_p.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/layout/sidebar_splitter.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/layout/sidebar_dmultitabbar.cpp
