fix compile with recent openSUSE Tumbleweed

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -371,16 +371,18 @@ endif()
 
 # -- Install Paths ------------------------------------------------------------
 
-message(STATUS "INSTALL DATA DIR     : ${KDE_INSTALL_FULL_DATADIR}")
-message(STATUS "INSTALL ICON DIR     : ${KDE_INSTALL_FULL_ICONDIR}")
-message(STATUS "INSTALL APP DIR      : ${KDE_INSTALL_FULL_APPDIR}")
-message(STATUS "INSTALL KNOTIFYRC DIR: ${KDE_INSTALL_FULL_KNOTIFYRCDIR}")
-message(STATUS "INSTALL BIN DIR      : ${KDE_INSTALL_FULL_BINDIR}")
-message(STATUS "INSTALL MAN DIR      : ${KDE_INSTALL_FULL_MANDIR}")
-message(STATUS "INSTALL PLUGIN DIR   : ${KDE_INSTALL_FULL_PLUGINDIR}")
-message(STATUS "INSTALL KXMLGUI DIR  : ${KDE_INSTALL_FULL_KXMLGUIDIR}")
-message(STATUS "INSTALL SERVICES DIR : ${KDE_INSTALL_FULL_KSERVICESDIR}")
-message(STATUS "INSTALL LIBEXEC DIR  : ${KDE_INSTALL_FULL_LIBEXECDIR}")
+message(STATUS "INSTALL DATA DIR      : ${KDE_INSTALL_FULL_DATADIR}")
+message(STATUS "INSTALL ICON DIR      : ${KDE_INSTALL_FULL_ICONDIR}")
+message(STATUS "INSTALL APP DIR       : ${KDE_INSTALL_FULL_APPDIR}")
+message(STATUS "INSTALL KNOTIFY5RC DIR: ${KDE_INSTALL_FULL_KNOTIFY5RCDIR}")
+message(STATUS "INSTALL KNOTIFYRC DIR : ${KDE_INSTALL_FULL_KNOTIFYRCDIR}")
+message(STATUS "INSTALL BIN DIR       : ${KDE_INSTALL_FULL_BINDIR}")
+message(STATUS "INSTALL MAN DIR       : ${KDE_INSTALL_FULL_MANDIR}")
+message(STATUS "INSTALL PLUGIN DIR    : ${KDE_INSTALL_FULL_PLUGINDIR}")
+message(STATUS "INSTALL KXMLGUI5 DIR  : ${KDE_INSTALL_FULL_KXMLGUI5DIR}")
+message(STATUS "INSTALL KXMLGUI DIR   : ${KDE_INSTALL_FULL_KXMLGUIDIR}")
+message(STATUS "INSTALL SERVICES DIR  : ${KDE_INSTALL_FULL_KSERVICESDIR}")
+message(STATUS "INSTALL LIBEXEC DIR   : ${KDE_INSTALL_FULL_LIBEXECDIR}")
 
 # -- Windows rules ------------------------------------------------------------
 
