export install paths detection in a dedicated cmake macro add service5 rules. Use non-versionned variables name everywhere.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,7 @@ include(MacroCompiler)
 include(MacroOpenCV)
 include(MacroJPEG)
 include(MacroBoolTo01)
+include(MacroInstallPaths)
 
 #######################################################################################################################
 
