--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -29,8 +29,8 @@ cmake_minimum_required(VERSION ${CMAKE_MIN_VERSION})
 
 # ==============================================================================
 
-option(ENABLE_KFILEMETADATASUPPORT       "Build digiKam with Plasma files indexer support (default=OFF)"                      OFF)
-option(ENABLE_AKONADICONTACTSUPPORT      "Build digiKam with Plasma Mail Contacts support (default=OFF)"                      OFF)
+option(ENABLE_KFILEMETADATASUPPORT       "Build digiKam with Plasma desktop files indexer support (default=OFF)"              OFF)
+option(ENABLE_AKONADICONTACTSUPPORT      "Build digiKam with Plasma desktop Mail Contacts support (default=OFF)"              OFF)
 option(ENABLE_MEDIAPLAYER                "Build digiKam with Media Player support (default=OFF)"                              OFF)
 option(ENABLE_DBUS                       "Build digiKam with DBUS support (default=ON)"                                       ON)
 option(ENABLE_APPSTYLES                  "Build digiKam with support for changing the widget application style (default=OFF)" OFF)
