fix compile without web engine #4 CCBUGS: 450467

--- a/core/utilities/geolocation/geoiface/CMakeLists.txt
+++ b/core/utilities/geolocation/geoiface/CMakeLists.txt
@@ -101,6 +101,11 @@ elseif(ENABLE_QWEBKIT)
         ${libgeoiface_SRCS}
         ${CMAKE_CURRENT_SOURCE_DIR}/widgets/htmlwidget_qwebkit.cpp
        )
+else()
+    set(libgeoiface_SRCS
+        ${libgeoiface_SRCS}
+        ${CMAKE_CURRENT_SOURCE_DIR}/../../nowebwidget/dnowebwidget.cpp
+       )
 endif()
 
 # Marble translations need explicit loading
