--- a/core/dplugins/generic/webservices/CMakeLists.txt
+++ b/core/dplugins/generic/webservices/CMakeLists.txt
@@ -7,7 +7,7 @@
 if(ENABLE_QWEBENGINE)
     include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::WebEngineWidgets,INTERFACE_INCLUDE_DIRECTORIES>)
     SET(QWEB_BACKEND Qt${QT_VERSION_MAJOR}::WebEngineWidgets)
-elseif(ENABLE_QWEBKIT)
+else()
     include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::WebKitWidgets,INTERFACE_INCLUDE_DIRECTORIES>)
     SET(QWEB_BACKEND Qt${QT_VERSION_MAJOR}::WebKitWidgets)
 endif()
