remove unecessary dependencies to Core5Compat from core/utilities

--- a/core/utilities/firstrun/CMakeLists.txt
+++ b/core/utilities/firstrun/CMakeLists.txt
@@ -30,11 +30,7 @@ include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Gui,INTERFACE_INCLU
                     $<TARGET_PROPERTY:KF5::XmlGui,INTERFACE_INCLUDE_DIRECTORIES>
 )
 
-if (Qt6_FOUND)
-
-  include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Core5Compat,INTERFACE_INCLUDE_DIRECTORIES>)
-
-else()
+if (NOT Qt6_FOUND)
 
     set(libfirstrun_SRCS
         ${libfirstrun_SRCS}
