--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -53,7 +53,7 @@ endif()
 
 ############## Find Packages ###################
 
-# Extra checkq to detect Qt core with minimal version before to continue.
+# Extra check to detect Qt core with minimal version before to continue.
 
 find_package(Qt6 ${QT6_MIN_VERSION} QUIET COMPONENTS Core)
 
@@ -217,7 +217,7 @@ if(NOT X265_FOUND)
     set(X265_LIBRARIES "")
 endif()
 
-find_package(exiv2 REQUIRED)
+find_package(exiv2 ${EXIV2_MIN_VERSION} REQUIRED)
 
 set_package_properties("exiv2"     PROPERTIES
                        DESCRIPTION "Required to build digiKam"
@@ -226,9 +226,6 @@ set_package_properties("exiv2"     PROPERTIES
                        PURPOSE     "Library to manage image metadata"
 )
 
-if("${exiv2_VERSION}" VERSION_LESS ${EXIV2_MIN_VERSION})
-    message(FATAL_ERROR "Exiv2 version is too old (${exiv2_VERSION})! Minimal version required:${EXIV2_MIN_VERSION}.")
-endif()
 
 # -- check Media player --------------------------------------------------------
 
