Add hamburger menu drop-down button in all window tool-bars if main-menus are hidden. Note : hamburger menu is only avaialble with KF5 framework >= 5.81. BUGS: 450643 FIXED-IN: 8.0.0

--- a/core/showfoto/main/showfotoui5.rc
+++ b/core/showfoto/main/showfotoui5.rc
@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<gui version="703" name="showfoto" translationDomain="digikam" >
+<gui version="800" name="showfoto" translationDomain="digikam" >
 
 <MenuBar>
 
@@ -164,6 +164,7 @@
     <Merge />
     <WeakSeparator/>
     <Action name="logo_action" />
+    <Action name="hamburger_menu"/>
 </ToolBar>
 
 <ActionProperties/>
