--- a/core/dplugins/generic/webservices/CMakeLists.txt
+++ b/core/dplugins/generic/webservices/CMakeLists.txt
@@ -5,39 +5,49 @@
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
 if(ENABLE_QWEBENGINE)
+
     include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::WebEngineWidgets,INTERFACE_INCLUDE_DIRECTORIES>)
-    SET(QWEB_BACKEND Qt${QT_VERSION_MAJOR}::WebEngineWidgets)
+    set(QWEB_BACKEND Qt${QT_VERSION_MAJOR}::WebEngineWidgets)
+
 else()
+
     include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::WebKitWidgets,INTERFACE_INCLUDE_DIRECTORIES>)
-    SET(QWEB_BACKEND Qt${QT_VERSION_MAJOR}::WebKitWidgets)
+    set(QWEB_BACKEND Qt${QT_VERSION_MAJOR}::WebKitWidgets)
+
 endif()
 
 add_subdirectory(box)
 add_subdirectory(dropbox)
-#add_subdirectory(facebook)
 add_subdirectory(filecopy)
 add_subdirectory(flickr)
 add_subdirectory(google)
 add_subdirectory(imgur)
 add_subdirectory(imageshack)
 add_subdirectory(inaturalist)
-#add_subdirectory(ipfs)
 add_subdirectory(mediawiki)
 add_subdirectory(onedrive)
 add_subdirectory(pinterest)
 add_subdirectory(piwigo)
 
-#if(Qt5XmlPatterns_FOUND)
-#    add_subdirectory(rajce)
-#endif()
+# Deprecated
+#add_subdirectory(facebook)
+#add_subdirectory(ipfs)
+
+if(NOT Qt6_FOUND AND Qt5XmlPatterns_FOUND)
+
+    add_subdirectory(rajce)
+
+endif()
 
 add_subdirectory(smugmug)
 add_subdirectory(twitter)
 add_subdirectory(yandexfotki)
 
 if(KF5KIO_FOUND)
+
     add_subdirectory(vkontakte)
     add_subdirectory(filetransfer)
+
 endif()
 
 # Not yet finalized
