--- a/core/libs/database/CMakeLists.txt
+++ b/core/libs/database/CMakeLists.txt
@@ -21,6 +21,8 @@ include_directories(
     $<TARGET_PROPERTY:KF5::CoreAddons,INTERFACE_INCLUDE_DIRECTORIES>
     $<TARGET_PROPERTY:KF5::WidgetsAddons,INTERFACE_INCLUDE_DIRECTORIES>
     $<TARGET_PROPERTY:KF5::XmlGui,INTERFACE_INCLUDE_DIRECTORIES>
+
+    ${Boost_INCLUDE_DIRS}
 )
 
 if(ENABLE_DBUS)
