more MSVC warnings disabled fix broken compilation under MSVC due to missing KF5::CoreAddons headers

--- a/core/app/utils/digikam_config.h.cmake.in
+++ b/core/app/utils/digikam_config.h.cmake.in
@@ -123,8 +123,8 @@
 #define LIBEXEC_INSTALL_DIR "${KDE_INSTALL_FULL_LIBEXECDIR}"
 
 /*
-  Disable indeep warnings from Visual Studio C++ 2008 (9.0)
-*/
+ * Disable indeep warnings from Visual Studio C++
+ */
 #if defined(_MSC_VER)
 // To disable warnings about no suitable definition provided for explicit template instantiation request.
 #pragma warning(disable : 4661)
@@ -132,6 +132,8 @@
 #pragma warning(disable : 4996)
 // To disable warnings about qualifier applied to reference type ignored.
 #pragma warning(disable : 4181)
+// To disable warnings about 'storage-class-keyword' no longer supported as storage class.
+#pragma warning(disable : 5033)
 #endif
 
 #endif // DIGIKAM_CONFIG_H
