--- a/core/utilities/firstrun/CMakeLists.txt
+++ b/core/utilities/firstrun/CMakeLists.txt
@@ -27,17 +27,18 @@ include_directories($<TARGET_PROPERTY:Qt${QT_VERSION_MAJOR}::Gui,INTERFACE_INCLU
 
                     $<TARGET_PROPERTY:KF5::I18n,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::ConfigCore,INTERFACE_INCLUDE_DIRECTORIES>
+                    $<TARGET_PROPERTY:KF5::CoreAddons,INTERFACE_INCLUDE_DIRECTORIES>
                     $<TARGET_PROPERTY:KF5::XmlGui,INTERFACE_INCLUDE_DIRECTORIES>
 )
 
-if (NOT Qt6_FOUND)
+if(NOT Qt6_FOUND)
 
     set(libfirstrun_SRCS
         ${libfirstrun_SRCS}
         ${CMAKE_CURRENT_SOURCE_DIR}/migratefromdigikam4page.cpp
     )
 
-endif ()
+endif()
 
 # Used by digikamgui
 add_library(gui_firstrun_obj OBJECT ${libfirstrun_SRCS})
